Add ProfileModule, ChatModule. Modified AssistModule

--- a/src/ChatService/Views/Shared/_Layout.cshtml
+++ b/src/ChatService/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2016 - ChatService</p>
+            <p>&copy; 2016 - <a>Xnire</a> Group by <a href="http://github.com/enchman">EnchMan</a></p>
         </footer>
     </div>
 
