--- a/src/ChatService/Views/Home/Signup.cshtml
+++ b/src/ChatService/Views/Home/Signup.cshtml
@@ -1,26 +1,37 @@
-﻿@{ 
+﻿@model ChatService.Models.AccountTemplate
+
+@{ 
     ViewData["Title"] = "Sign up";
 }
 
-<form method="post">
-    <div>
+@using (Html.BeginForm("Signup", "Home", "POST"))
+{
+    <div class="panel">
+        <h3>@ViewBag.Result</h3>
+    </div>
+    <div class="panel panel-default">
         <label for="user">Username</label>
-        <input id="user" type="text" name="username" />
+        @Html.TextBoxFor(m => m.Username, new { id = "user" })
+        <!--<input id="user" type="text" name="username" />-->
     </div>
-    <div>
+    <div class="panel panel-default">
         <label for="pass">Password</label>
-        <input id="pass" type="password" name="password" />
+        @Html.PasswordFor(m => m.Passcode, new { id = "pass" })
+        <!--<input id="pass" type="password" name="password" />-->
     </div>
-    <div>
+    <div class="panel panel-default">
         <label for="repass">Re-Password</label>
-        <input id="repass" type="password" name="repassword" />
+        @Html.PasswordFor(m => m.Repasscode, new { id = "repass" })
+        <!--<input id="repass" type="password" name="repassword" />-->
     </div>
-    <div>
+    <div class="panel panel-default">
         <label for="display">Display name</label>
-        <input id="display" type="text" name="displayname" />
+        @Html.TextBoxFor(m => m.DisplayName, new { id = "display" })
+        <!--<input id="display" type="text" name="displayname" />-->
     </div>
     <div>
         <label></label>
+        <input type="hidden" name="seed" value="" />
         <button type="submit">Sign up</button>
     </div>
-</form>
+}
