--- a/src/ChatService/Views/_ViewStart.cshtml
+++ b/src/ChatService/Views/_ViewStart.cshtml
@@ -1,3 +1,10 @@
 ﻿@{
-    Layout = "_Layout";
+    if (Context.Items.ContainsKey(SessionType.AccountId))
+    {
+        Layout = "_Layout";
+    }
+    else
+    {
+        Layout = "_Template";
+    }
 }
