--- a/src/ChatService/Views/Shared/_Template.cshtml
+++ b/src/ChatService/Views/Shared/_Template.cshtml
@@ -20,7 +20,7 @@
         </div>
         <div class="content-body">
             <div class="wrapper">
-
+                @RenderBody()
             </div>
         </div>
         <div class="footer">
