Ending Core experiment

--- a/src/ChatService/Views/Shared/_Layout.cshtml
+++ b/src/ChatService/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                 <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">ChatService</a>
             </div>
             <div class="navbar-collapse collapse">
-                @if (!UserAction.IsLogin)
+                @if (true)
                 {
                     <ul class="nav navbar-nav">
                         <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
